# roboracer_116_lehigh

./: .gitignore
team_ws/install/: local_setup.sh  setup.sh
team_ws/install/apriltag/share/apriltag/: package.sh
team_ws/install/apriltag_msgs/share/apriltag_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
team_ws/install/apriltag_ros/lib/apriltag_ros/: apriltag_node
team_ws/install/apriltag_ros/share/apriltag_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
team_ws/install/e116/lib/e116/: e116_OLED  e116_racecar  gap_follow  keyJoyTerminal
team_ws/install/e116/share/e116/: package.ps1  package.sh  package.zsh
team_ws/log/: latest_build
team_ws/src/e116/: setup.cfg  setup.py
team_ws/src/e116/config/: camInfo.yaml  e116.yaml
team_ws/src/e116/e116/: e116_racecar.py  gap_follow.py
team_ws/src/e116/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
team_ws/src/e116/launch/: teleop_terminal.launch.py
team_ws/src/e116/launch/install/: local_setup.sh  setup.sh
team_ws/src/e116/launch/log/: latest_build
team_ws/src/e116/log/: latest_build
team_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
team_ws/src/install/apriltag/lib/: libapriltag.so.3.4.5
team_ws/src/install/e116/share/e116/: package.bash  package.sh  package.xml
team_ws/src/install/e116/share/e116/config/: e116.yaml
team_ws/src/log/: latest_build
week2/: pwm_motor.py  pwm_steering.py  teleop.py  teleop_terminal.py
(+107 files in other folders)
