<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e116</name>
  <version>0.0.1</version>
  <description>Package e116 for 1:16-scale autonomous-driving car</description>
  <maintainer email="yrz218@lehigh.edu">Rosa Zheng, Lehigh University</maintainer>
  <license>Apache License 2.0</license>

  <depend>python3-jetson-gpio</depend>
  <depend>rclpy</depend>
  <depend>pygame</depend>
  <depend>ackermann_msgs</depend>
  <depend>time</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
